added more docs

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,10 +1,11 @@
 # Home
- 
-Welcome! CloudTerms is a cloud-based platform that allows you to create, manage, and easily integrate your terms of service, privacy policy and other legal documents easily into your app.
+> Docs are actively being worked on. If you have any questions or need help, please reach out to us on [Discord](https://discord.gg/XGK3cmEY2A).
+
+Welcome! CloudTerms is a cloud-based platform that allows you to create, manage, and easily integrate your terms of service, privacy policy and other legal agreements easily into your app.
 
 ### How it works
 1. Create an application in the [dashboard](https://cloudterms.dev/dashboard).
 2. Add all your apps legal documents on the terms page.
 3. Create an API Key and add it to your apps `.env`.
-4. Intergrate CloudTerms into your JavaScript or TypeScript app using one of our SDKs.
+4. Intergrate CloudTerms into your JavaScript or TypeScript app using one of our [SDKs](./sdks).
 
