--- a/apps/docs/pages/sdks/react.mdx
+++ b/apps/docs/pages/sdks/react.mdx
@@ -4,7 +4,8 @@ Simplify term agreements in your React applications with [@cloudterms/react](htt
 
 ###### [Example](https://github.com/cloudterms/cloudterms/tree/main/examples/react-vite), uses [Hono API example](https://github.com/cloudterms/cloudterms/tree/main/examples/hono-api) for interacting with CloudTerms.
 
-__Key Features:__
+**Key Features:**
+
 - Includes the [@cloudterms/js](./js) SDK.
 - Pre-built Agree to Terms Component: A modal window that pops up, disabling your app until the user agrees to the terms.
 - Easy Integration: Simply wrap your app with the CloudTermsProvider component to get started.
@@ -13,6 +14,7 @@ __Key Features:__
 Get started with @cloudterms/react today and streamline term agreements in your React applications!
 
 ## Setup
+
 ### Install `@cloudterms/react`
 
 ```bash
@@ -20,9 +22,11 @@ npm install @cloudterms/react
 ```
 
 ### Usage
+
 Wrap your app with the CloudTermsProvider component.
 
-__Props:__
+**Props:**
+
 - `userId` A unique userId that identifies the user to track their agreements.
 - `terms` An array of terms to display to the user.
 - `hasAgreed` A boolean that indicates if the user has agreed to the terms. When true, the modal will not display. When false, the modal will prompt the user to agree to the terms.
@@ -37,3 +41,4 @@ __Props:__
 >
   <App />
 </CloudTermsClientProvider>
+```
