--- a/apps/docs/pages/sdks/nextjs.mdx
+++ b/apps/docs/pages/sdks/nextjs.mdx
@@ -3,6 +3,7 @@
 Take your Next.js application to the next level with [@cloudterms/nextjs](https://www.npmjs.com/package/@cloudterms/nextjs). This package provides a seamless terms agreement experience, including a pre-built CloudTermsProvider component and an API handler that eliminates the need for manual CloudTerms API interactions.
 
 Key Features:
+
 - Includes the [@cloudterms/react](./react) SDK.
 - Pre-built Agree to Terms Component: A modal window that pops up, disabling your app until the user agrees to the terms.
 - API Handler: Automatically handles CloudTerms API interactions, saving you time and effort.
@@ -14,6 +15,7 @@ Streamline term agreements and focus on building your Next.js application with @
 [Example](https://github.com/cloudterms/cloudterms/tree/main/examples/next-js)
 
 ## Setup
+
 ### Install `@cloudterms/nextjs`
 
 ```bash
@@ -21,6 +23,7 @@ npm install @cloudterms/nextjs
 ```
 
 ### Set your environment variables
+
 ```bash
 # Your application ID
 CLOUDTERMS_APP_ID="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
@@ -46,11 +49,10 @@ Add the following to your root `/app/layout.tsx
 
 Wrap your app with the CloudTermsProvider component.
 
-__Props:__
+**Props:**
+
 - `userId` A unique userId that identifies the user to track their agreements.
 
 ```jsx
-  <CloudTermsProvider userId={userId}>
-    {children}
-  </CloudTermsProvider>
+<CloudTermsProvider userId={userId}>{children}</CloudTermsProvider>
 ```
