added demo video to docs

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,8 +1,12 @@
+import { DemoVideo } from './demo-video'
+
 # Home
 
 > Docs are actively being worked on. If you have any questions or need help, please reach out to us on [Discord](https://discord.gg/XGK3cmEY2A).
 
 Welcome! CloudTerms is a cloud-based platform that allows you to create, manage, and easily integrate your terms of service, privacy policy and other legal agreements easily into your app.
+
+<DemoVideo />
 
 ### How it works
 
