slight copy change

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -13,4 +13,4 @@ Welcome! CloudTerms is a cloud-based platform that allows you to create, manage,
 1. Create an application in the [dashboard](https://cloudterms.dev/dashboard).
 2. Add all your apps legal documents on the terms page.
 3. Create an API Key and add it to your apps `.env`.
-4. Intergrate CloudTerms into your JavaScript or TypeScript app using one of our [SDKs](./sdks).
+4. Intergrate CloudTerms into your JavaScript or TypeScript app using one of our [SDKs](./sdks) or the [REST API](./rest-api).
